--- a/app/src/main/res/layout/item_category.xml
+++ b/app/src/main/res/layout/item_category.xml
@@ -6,25 +6,27 @@
     android:layout_height="wrap_content">
     <ImageView
         android:id="@+id/ic_iv_cover_image"
-        android:layout_width="160dp"
-        android:layout_height="160dp"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
         android:layout_marginLeft="12dp"
         android:layout_marginRight="12dp"
         android:layout_marginTop="16dp"
         />
     <TextView
         android:id="@+id/ic_tv_category_name"
-        android:layout_width="160dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:maxLines="1"
         android:ellipsize="end"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         android:textColor="@color/colorAccent"
-        android:textSize="16dp"
+        android:textSize="12dp"
+        android:layout_marginLeft="12dp"
+        android:layout_marginRight="12dp"
         android:layout_gravity="center"
         android:gravity="center"
-        tools:text="專輯名稱"
+        tools:text="專輯名稱專輯名稱專輯名稱專輯名稱"
         />
 
 </LinearLayout>
