--- a/app/src/main/res/layout/item_horizontal_category.xml
+++ b/app/src/main/res/layout/item_horizontal_category.xml
@@ -6,6 +6,7 @@
     >
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/vh_rcv_category_list"
+        android:paddingLeft="12dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
