--- a/app/src/main/res/layout/item_song_list.xml
+++ b/app/src/main/res/layout/item_song_list.xml
@@ -20,25 +20,28 @@
         android:textSize="18dp"
         android:textColor="@android:color/black"
         android:maxLines="2"
+        android:ellipsize="end"
         android:layout_marginLeft="24dp"
-        android:layout_marginTop="24dp"
-        android:layout_width="wrap_content"
+        android:layout_marginRight="16dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toRightOf="@id/isl_iv_image"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/isl_tv_song_list_owner_and_date"
         tools:text="歌單名稱"
         />
     <TextView
         android:id="@+id/isl_tv_song_list_owner_and_date"
-        android:textSize="18dp"
+        android:textSize="14dp"
         android:textColor="@android:color/black"
         android:maxLines="2"
         android:layout_marginLeft="24dp"
-        android:layout_marginTop="16dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toRightOf="@id/isl_iv_image"
         app:layout_constraintTop_toBottomOf="@id/isl_tv_song_list_name"
+        app:layout_constraintBottom_toBottomOf="parent"
         tools:text="Dada@2020/11/10"
         />
 
