[SongList Paging] keep paging state

--- a/app/src/main/res/layout/item_load_state_footer.xml
+++ b/app/src/main/res/layout/item_load_state_footer.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical"
     android:padding="8dp">
     <TextView
-        android:id="@+id/error_msg"
+        android:id="@+id/ilsf_error_msg"
         android:textColor="?android:textColorPrimary"
         android:textSize="16dp"
         android:layout_width="wrap_content"
@@ -15,14 +15,14 @@
         android:textAlignment="center"
         tools:text="Timeout"/>
     <ProgressBar
-        android:id="@+id/progress_bar"
+        android:id="@+id/ilsf_progress_bar"
         style="?android:attr/progressBarStyle"
         android:indeterminateTint="@color/colorPrimary"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"/>
     <Button
-        android:id="@+id/retry_button"
+        android:id="@+id/ilsf_retry_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
