--- a/app/src/main/res/layout/item_song.xml
+++ b/app/src/main/res/layout/item_song.xml
@@ -28,22 +28,34 @@
         app:layout_constraintLeft_toRightOf="@id/is_iv_image"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/is_tv_artist_and_date"
+        app:layout_constraintBottom_toTopOf="@id/is_ll_date_wrapper"
         tools:text="歌曲名稱"
         />
-    <TextView
-        android:id="@+id/is_tv_artist_and_date"
-        android:textSize="14dp"
-        android:textColor="@android:color/black"
-        android:maxLines="2"
-        android:layout_marginLeft="24dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <LinearLayout
+        android:id="@+id/is_ll_date_wrapper"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toRightOf="@id/is_iv_image"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/is_tv_song_name"
-        app:layout_constraintBottom_toBottomOf="parent"
-        tools:text="Dada@2020/11/10"
-        />
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent">
+        <TextView
+            android:id="@+id/is_tv_artist_and_date"
+            android:textSize="14dp"
+            android:textColor="@android:color/black"
+            android:layout_marginLeft="24dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:singleLine="true"
+            android:scrollHorizontally="true"
+
+            tools:text="Dada@2020/11/10"
+            />
+    </LinearLayout>
+
 
 
 
