--- a/app/src/main/res/layout/item_play_list.xml
+++ b/app/src/main/res/layout/item_play_list.xml
@@ -28,22 +28,32 @@
         app:layout_constraintLeft_toRightOf="@id/ipl_iv_image"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/ipl_tv_play_list_owner_and_date"
+        app:layout_constraintBottom_toTopOf="@id/ipl_ll_date_wrapper"
         tools:text="歌單名稱"
         />
-    <TextView
-        android:id="@+id/ipl_tv_play_list_owner_and_date"
-        android:textSize="14dp"
-        android:textColor="@android:color/black"
-        android:maxLines="2"
-        android:layout_marginLeft="24dp"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/ipl_ll_date_wrapper"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toRightOf="@id/ipl_iv_image"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/ipl_tv_play_list_name"
-        app:layout_constraintBottom_toBottomOf="parent"
-        tools:text="Dada@2020/11/10"
-        />
+        app:layout_constraintBottom_toBottomOf="parent">
+        <TextView
+            android:id="@+id/ipl_tv_play_list_owner_and_date"
+            android:textSize="14dp"
+            android:textColor="@android:color/black"
+            android:ellipsize="end"
+            android:singleLine="true"
+            android:scrollHorizontally="true"
+            android:layout_marginLeft="24dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="Dada@2020/11/10"
+            />
+    </LinearLayout>
+
 
 
 
