--- a/app/src/main/res/layout/item_play_list.xml
+++ b/app/src/main/res/layout/item_play_list.xml
@@ -43,7 +43,7 @@
         <TextView
             android:id="@+id/ipl_tv_play_list_owner_and_date"
             android:textSize="14dp"
-            android:textColor="@android:color/black"
+            android:textColor="@color/sub_text"
             android:ellipsize="end"
             android:singleLine="true"
             android:scrollHorizontally="true"
