--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,6 @@
     <color name="kkbox_30">#4D09CEF6</color>
     <color name="place_holder">#1058B2DC</color>
     <color name="white">#FFFFFF</color>
+    <color name="sub_text">#656765</color>
 
 </resources>
